vemo-app/main/default/objects/ProgramOfStudy__c/ProgramOfStudy__c.object-meta.xml
<CustomObject>
    <label>Program of Study</label>
    <nameField>
        <displayFormat>POS-{0000}</displayFormat>
        <label>Program of Study Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs of Study</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>