vemo-app/main/default/objects/ProgramOfStudy__c/fields/CIPCode__c.field-meta.xml
<CustomField>
    <fullName>CIPCode__c</fullName>
    <label>CIPCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>