vemo-app/main/default/objects/ProgramOfStudy__c/fields/CIPDefinition__c.field-meta.xml
<CustomField>
    <fullName>CIPDefinition__c</fullName>
    <label>CIPDefinition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>