vemo-app/main/default/objects/ProgramOfStudy__c/fields/CIPFamily__c.field-meta.xml
<CustomField>
    <fullName>CIPFamily__c</fullName>
    <label>CIPFamily</label>
    <length>255</length>
    <type>Text</type>
</CustomField>