vemo-app/main/default/objects/ProgramOfStudy__c/fields/CIPTitle__c.field-meta.xml
<CustomField>
    <fullName>CIPTitle__c</fullName>
    <label>CIPTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>