vemo-app/main/default/objects/ProgramOfStudy__c/fields/CrossReferences__c.field-meta.xml
<CustomField>
    <fullName>CrossReferences__c</fullName>
    <label>CrossReferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>