vemo-app/main/default/objects/ProgramOfStudy__c/fields/Examples__c.field-meta.xml
<CustomField>
    <fullName>Examples__c</fullName>
    <label>Examples</label>
    <length>255</length>
    <type>Text</type>
</CustomField>