vemo-app/main/default/objects/ProgramOfStudy__c/fields/RecordLabel__c.field-meta.xml
<CustomField>
    <fullName>RecordLabel__c</fullName>
    <formula>"CIP CODE:"+ CIPCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Label</label>
    <type>Text</type>
</CustomField>