vemo-app/main/default/objects/ProgramOfStudy__c/recordTypes/CIPCode.recordType-meta.xml
<RecordType>
    <fullName>CIPCode</fullName>
    <active>true</active>
    <label>CIP Code</label>
</RecordType>