vemo-app/main/default/objects/ProgramOfStudy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CIPCode__c</columns>
    <columns>CIPDefinition__c</columns>
    <columns>CIPFamily__c</columns>
    <columns>CIPTitle__c</columns>
    <columns>GUID__c</columns>
    <columns>RecordLabel__c</columns>
    <columns>RecordLink__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>